--- a/style.css
+++ b/style.css
@@ -1,34 +1,192 @@
-.police1{
-  font-family: Arial;
-}
-.txtR{
-  font-style: italic;
-  color: tomato;
-}
-.txtB{
-  font-style: italic;
-  color: aquamarine
-}
-.txtV{
-  font-style: italic;
-  color: goldenrod;
-}
-.police2{
-  font-family: cursive;
-}
-.back1{
-  background-color: tomato;
-  font-style: italic;
-}
-.back2{
-  background-color: aquamarine;
-  font-style: italic;
-}
-.back3{
-  background-color: goldenrod;
-  font-style: italic;
+@import url('https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Norican&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.footer {
+a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+body {
+  background-color: #00738D;
+}
+
+header {
+  margin-bottom: 60px;
+  background-image: url("img/fond.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+
+nav {
+  font-family: 'Norican', cursive;
+  padding: 20px;
+  background-color: #0000004c;
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.liens {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.img_liens {
+  padding: 2px;
+  border-radius: 50px;
+  margin: 0 80px;
+  width: 25px;
+}
+
+.text_liens {
+  font-size: 25px;
+  margin: 10px 30px;
+}
+
+.mois_gratuit {
+  font-family: 'Coda Caption', sans-serif;
+  font-size: 25px;
+  background-color: #ffffff4c;
+  padding: 15px;
+  text-align: center;
+}
+
+.text_blanc {
+  color: #FFFFFF;
+}
+
+.section_titre {
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sport_factory {
+  margin-bottom: -80px;
+  font-family: 'Coda Caption', sans-serif;
+  color: #D9A017;
+  font-size: 100px;
+  text-shadow: 5px 4px 10px #000000;
+}
+
+.salle_de_sport {
+  font-family: 'Norican', cursive;
+  color: #FFFFFF;
+  font-size: 100px;
+  text-shadow: 5px 4px 10px #000000;
+}
+
+.titre {
+  margin-bottom: -50px;
+  font-family: 'Coda Caption', sans-serif;
+  color: #D9A017;
+  font-size: 65px;
+  text-shadow: 5px 4px 10px #000000;
+  text-align: center;
+}
+
+.lieux {
+  font-family: 'Norican', cursive;
+  color: #FFFFFF;
+  font-size: 65px;
+  text-shadow: 5px 4px 10px #000000;
+  text-align: center;
+}
+
+.section_maps {
+  display: flex;
+  justify-content: center;
+}
+
+.maps {
+  margin: 20px auto;
+}
+
+.section_article {
+  margin: 0 80px;
+}
+
+.img {
+  width: 350px;
+  margin: 0 20px 20px 0;
+}
+
+.sport_1_et_3 {
+  float: left;
+}
+
+.sport_2 {
+  float: right;
+}
+
+.ligne {
+  margin: 80px 0;
+  color: #FFFFFF;
+}
+
+.section_temoignages {
+  padding: 80px;
+  background: linear-gradient(45.5deg, #1f1f1f, #00738d00);
+}
+
+.position_temoignages {
+  display: flex;
+  justify-content: center;
+}
+
+.temoignages {
+  font-family: 'Coda Caption', sans-serif;
+  color: #D9A017;
+  font-size: 45px;
+  text-shadow: 5px 4px 10px #000000;
+  text-align: center;
+}
+
+.article_profil {
+  margin: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.name {
+  font-family: 'Norican', cursive;
+  color: #FFFFFF;
+  font-size: 30px;
+  text-align: center;
+}
+
+.profil {
+  margin: 10px 0 30px;
+  width: 300px;
+}
+
+.bio {
+  color: #FFFFFF;
+  text-align: center;
+}
+
+footer {
+  background-color: #FFFFFF;
+  padding: 35px;
+  line-height: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.eden_school {
+  width: 130px;
+  margin-bottom: 15px;
 }
