--- a/style.css
+++ b/style.css
@@ -1,34 +1,80 @@
-.police1{
-  font-family: Arial;
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+h1, h2, h3, h4, h5, h6, p, em {
+  color: #ffffff;
 }
-.txtR{
-  font-style: italic;
-  color: tomato;
+
+body {
+  background-color: #56595E;
+  font-family: 'Roboto', sans-serif;
 }
-.txtB{
-  font-style: italic;
-  color: aquamarine
+
+.header {
+  display: flex;
+  justify-content: end;
 }
-.txtV{
-  font-style: italic;
-  color: goldenrod;
+
+.titre {
+  font-family: 'Amatic SC', cursive;
+  font-size: 85px;
+  text-align: center;
 }
-.police2{
-  font-family: cursive;
+
+.header_img {
+  margin-left: 12%;
 }
-.back1{
-  background-color: tomato;
-  font-style: italic;
+
+.main {
+  margin: 25px 300px;
 }
-.back2{
-  background-color: aquamarine;
-  font-style: italic;
+
+.sujets {
+  margin-bottom: -0px;
+  font-family: 'Amatic SC', cursive;
+  font-size: 50px;
 }
-.back3{
-  background-color: goldenrod;
-  font-style: italic;
+
+.txt {
+  font-size: 25px;
+  line-height: 30px;
+}
+
+.text_final {
+  font-size: 35px;
+  line-height: 60px;
+  text-align: center;
+}
+
+.auteur {
+  margin: 0;
+  font-size: 15px;
+  text-align: end;
 }
 
 .footer {
-  display: flex;
+  margin-top: 80px;
+  display: grid;
+  justify-content: center;
+}
+
+.eden_school {
+  margin: auto;
+  width: 100px;
+}
+
+.copyright {
+  font-size: 15px;
+  margin: 2px;
+  text-align: center;
+}
+
+.source {
+  font-size: 15px;
+  margin: 1px;
+  text-align: center;
+}
+
+.txt_bleu {
+  color: #5CB5B3;
 }
