--- a/style.css
+++ b/style.css
@@ -1,34 +1,294 @@
-.police1{
-  font-family: Arial;
-}
-.txtR{
-  font-style: italic;
-  color: tomato;
-}
-.txtB{
-  font-style: italic;
-  color: aquamarine
-}
-.txtV{
-  font-style: italic;
-  color: goldenrod;
-}
-.police2{
-  font-family: cursive;
-}
-.back1{
-  background-color: tomato;
-  font-style: italic;
-}
-.back2{
-  background-color: aquamarine;
-  font-style: italic;
-}
-.back3{
-  background-color: goldenrod;
-  font-style: italic;
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans:wght@300&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.footer {
+:root {
+  --white: #FFF;
+  --orange: #FF7300;
+  --grey: #6A5C6B;
+  --light_grey: #D1CED2;
+  --blue: #064693;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  color: var(--grey);
+  text-decoration: none;
+}
+
+button {
+  border: none;
+}
+
+body {
+  color: var(--grey);
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+  background-image: url(img/fond.svg);
+}
+
+/* HEADER NAV */
+nav {
+  text-transform: uppercase;
+  font-family: 'Luckiest Guy', cursive;
   display: flex;
+  justify-content: center;
+  padding: 3em 10em;
+}
+
+.position_titre {
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  margin-right: 1em;
+  width: 3em;
+}
+
+h1 {
+  font-size: 2.5em;
+}
+
+.img_nav {
+  width: 1.5em;
+}
+
+ul {
+  margin: 0 auto;
+  display: flex;
+  gap: 5em;
+}
+
+a {
+  color: var(--orange);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+}
+
+.fond_header {
+  color: var(--white);
+  font-size: 1.2em;
+  text-align: center;
+  background: url(img/fond.gif) no-repeat center;
+  background-size: cover;
+  padding: 10em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3em;
+}
+
+.titre_header {
+  font-size: 2.5em;
+  font-weight: normal;
+  font-family: 'Luckiest Guy', cursive;
+}
+
+.lien_header {
+  color: var(--white);
+  background-color: var(--orange);
+  border-radius: 7px;
+  width: 6em;
+  padding: 0.5em;
+}
+
+/* MAIN */
+main {
+  margin: 1em 12em;
+}
+
+.titre_main {
+  margin: 3em 0 0;
+  color: var(--grey);
+  font-size: 2.5em;
+  font-family: 'Luckiest Guy', cursive;
+  text-align: center;
+}
+
+hr {
+  margin: 2em 0;
+  border: solid 6px var(--light_grey);
+}
+
+.position_flex {
+  display: flex;
+  justify-content: center;
+  gap: 3em;
+}
+
+/* RAPPEURS */
+.article_rappeurs {
+  font-size: 1.2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5em;
+}
+
+.img_rappeurs {
+  width: 18em;
+}
+
+.titre_article {
+  color: var(--orange);
+  font-family: 'Luckiest Guy', cursive;
+}
+
+.twitter {
+  color: var(--grey);
+}
+
+/* PLAYLISTS */
+.article_playlists {
+  font-size: 1.2em;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5em;
+}
+
+.cercle_img_playlists {
+  background-color: var(--light_grey);
+  border: solid 1px var(--grey);
+  border-radius: 50%;
+  padding: 1em;
+  width: 4em;
+  height: 4em;
+}
+
+.img_playlists {
+  width: 1.7em;
+  height: 1.7em;
+}
+
+/* AVIS */
+.article_avis {
+  font-size: 1.2em;
+  line-height: 2em;
+}
+
+.titre_article_avis {
+  margin-bottom: 1em;
+  color: var(--orange);
+  font-family: 'Luckiest Guy', cursive;
+}
+
+.img_right {
+  margin: 0 0 1em 1em;
+  float: right;
+  width: 35em;
+}
+
+.img_left {
+  margin: 1em 1em 0 0;
+  float: left;
+  width: 35em;
+}
+
+.bouton_partager {
+  margin-bottom: 6em;
+  background-color: var(--grey);
+  border-radius: 10px;
+  padding: 0.5em;
+  width: 13em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.partager {
+  color: var(--white);
+}
+
+.img_partager {
+  width: 1em;
+}
+
+/* FORM */
+form {
+  padding: 1em 2em;
+}
+
+.position_input {
+  margin: 3em 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1em;
+}
+
+.section_input {
+  position: relative;
+}
+
+.section_input:nth-child(1), .section_input:nth-child(2)  {
+  width: 49%;
+}
+
+.section_input:nth-child(3) {
+  width: 100%;
+}
+
+input {
+  font-size: 1em;
+  background-color: var(--white);
+  border: solid 1.5px var(--grey);
+  border-radius: 50px;
+  padding: 1.5em 5em;
+  width: 100%;
+}
+
+.img_input {
+  position: absolute;
+  z-index: 1;
+  margin: 0.6em 0 0 0.7em;
+  width: 3em;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+}
+
+.envoyer {
+  color: var(--white);
+  background-color: var(--blue);
+  padding: 1.5em 2em;
+}
+
+.effacer {
+  color: var(--white);
+  background-color: var(--grey);
+  padding: 1.5em 2em;
+}
+
+/* FOOTER */
+footer {
+  color: var(--white);
+  background-color: var(--grey);
+  padding: 4em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.eden_school {
+  width: 8em;
+  margin: 1.5em;
 }
